// Copyright 2022 The Engula Authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
// http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package engula.v1;

import "engula/v1/value.proto";

message DatabaseRequest {
  string name = 1;
  repeated CollectionRequest requests = 2;
}

message DatabaseResponse { repeated CollectionResponse responses = 1; }

message CollectionRequest {
  string name = 1;
  repeated ObjectExpr exprs = 2;
}

message CollectionResponse { repeated ObjectResult results = 1; }

message RangeExpr {}

message ObjectExpr {
  // One of batch or range.
  repeated bytes batch = 1;
  // RangeExpr range = 2;
  // FilterExpr filter = 3;
  // One of select or mutate.
  SelectExpr select = 4;
  MutateExpr mutate = 5;
}

message ObjectResult {
  // ObjectError error = 1;
  repeated Value values = 2;
}

message FilterExpr {}

message SelectExpr {
  SelectFunction func = 1;
  repeated Value args = 2;
  Value index = 3;
}

message MutateExpr {
  MutateFunction func = 1;
  repeated Value args = 2;
  Value index = 3;
  // TODO: conditional expression
}

enum SelectFunction {
  // General
  GET = 0;

  // Container
  LEN = 10;
}

enum MutateFunction {
  // General
  SET = 0;
  DELETE = 1;

  // Numeric
  ADD = 10;

  // Sequence
  TRIM = 20;
  LPOP = 21;
  RPOP = 22;
  LPUSH = 23;
  RPUSH = 24;

  // Container
  CLEAR = 30;
  EXTEND = 31;
  REMOVE = 32;
}
